compiler/testData/diagnostics/tests/nullableTypes/unsafeCallOnOperatorRedCode.fir.kt
// RUN_PIPELINE_TILL: SOURCE
fun add(a: Int?, b: Int?): Int {
    return a+<!SYNTAX!><!>
}
